Layout bug fix

--- a/app/common/directives/templateMurderface/templateMurderface.directive.scss
+++ b/app/common/directives/templateMurderface/templateMurderface.directive.scss
@@ -1,7 +1,8 @@
 .wrap {
-  height: 400px;
-  margin: 20px auto;
+  height: 420px;
+  //margin: 20px auto;
   width: 700px;
+
 }
 .image {
   //background-image: url('http://cs9902.vk.me/u586044/-6/x_e872c8fd.jpg');
@@ -21,6 +22,8 @@
   background-color: #7AC039;
   height: 10px;
   width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 
 .logo {
@@ -28,7 +31,7 @@
   left: 20px;
   position: absolute;
   top: 20px;
-  width: 80px;
+  //width: 80px;
 }
 
 .sign{
@@ -38,15 +41,29 @@
 }
 
 .quote {
+  margin: 0 auto;
   color: white;
-  display: block;
+
+  text-align: center;
+  width: 500px;
   font-size: 30px;
   font-style: italic;
   font-weight: 700;
-  margin: 0 auto;
-  position: relative;
-  text-align: center;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 500px;
+
+  //justify-content: center;
+  //align-items: center;
+  //display: block;
+  //position: relative;
+  //top: 50%;
+  //-webkit-transform: translateY(-50%);
+  //-ms-transform: translateY(-50%);
+  //transform: translateY(-50%);
+}
+
+.test {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
