--- a/app/components/pictures/pictures.scss
+++ b/app/components/pictures/pictures.scss
@@ -3,3 +3,9 @@
   background-color: #1D303E;
 
 }
+
+.dir-wrap {
+  width: 700px;
+  margin: 20px auto;
+  background-color: red;
+}
